# gcov2html-check-Example

./: .gitignore  Makefile.am  README  configure.ac
cfg/: .gitignore
lib/: Makefile.am  money.c  money.h
m4/: .gitignore
src/: .gitignore  Makefile  Makefile.am  bsort.c  bsort.h  main.c
tests/: Makefile.am  check_bsort.c  check_money.c
